--- a/Device/.vscode/settings.json
+++ b/Device/.vscode/settings.json
@@ -5,5 +5,8 @@
     },
     "C_Cpp.intelliSenseEngine": "Tag Parser",
     "IoTWorkbench.DevicePath": "Device",
-    "IoTWorkbench.BoardId": "esp32"
+    "IoTWorkbench.BoardId": "esp32",
+    "arduino.path": "/Applications",
+    "arduino.commandPath": "Contents/MacOS/arduino",
+    "arduino.additionalUrls": ""
 }
